deployment/k8s-services-deployment.yaml
###################################
# USUARIOS
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/proyecto-final-miso-399322/experimento/users:1.0
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-users
  annotations:
    cloud.google.com/backend-config: '{"default": "proyecto-final-users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31020
---
