deployment/k8s-ingress-deployment.yaml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-final-ingress
  labels:
    name: proyecto-final-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: servicio-users
            port: 
              number: 80
